--- a/static/css/components/page-backgrounds.scss
+++ b/static/css/components/page-backgrounds.scss
@@ -54,4 +54,5 @@
 .add-recipe-bg,
 .edit-recipe-bg {
     background-image: url('../images/adils-photography-419432-unsplash.jpg');
+    top: 0 !important;
 }
