Updated styling for add and edit ingredients pages to ensure the page rendered properly on all device sizes

--- a/static/css/components/page-backgrounds.scss
+++ b/static/css/components/page-backgrounds.scss
@@ -49,6 +49,7 @@
 
 .edit-add-ingredient-bg {
     background-image: url('../images/adils-photography-419432-unsplash.jpg');
+    top: 0 !important;
 }
 
 .add-recipe-bg,
