--- a/templates/edit_ingredient.html
+++ b/templates/edit_ingredient.html
@@ -18,7 +18,7 @@
             {% endif %}
             <ul class="new-user-form">
                 <li><input id="ingredient_name" name="ingredient_name" value="{{ ingredient.ingredient_name.title() }}" class="text-input readonly" readonly></li>
-                <li>
+                <li class="hide-on-mobile">
                     <input id="ingredient_image_url" name="ingredient_image_url" type="text" value="{{ ingredient.ingredient_image_url }}" class="text-input" placeholder="Ingredient photo image address (or leave blank)">
                     <i class="fas fa-question-circle user-photo-instructions-btn"></i>
                 </li>
