--- a/templates/view_recipe.html
+++ b/templates/view_recipe.html
@@ -31,8 +31,8 @@
                         <p>{{ this_recipe.cusine }}</p>
                     </div>
                     <div class="data2">
-                        <h2 class="recipe-score">Unrated</h2>
-                        <p></p>
+                        <h2 class="recipe-score">User rating: </h2>
+                        <p>Unrated</p>
                     </div>
                 </div>
             </div>
