--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1481,7 +1481,7 @@ a ~ .recipe-row-bottom {
   @media (max-width: 500px) {
     .view-recipe-section .container .image-container img,
     .edit-recipe-section .container .image-container img {
-      height: 200px; } }
+      height: 250px; } }
 
 .image-container ~ h1 {
   max-width: 468px;
@@ -1571,6 +1571,10 @@ a ~ .recipe-row-bottom {
     .recipe-instructions h2,
     .recipe-ingredients h2 {
       text-align: center; } }
+
+@media (max-width: 500px) {
+  .data {
+    text-align: center; } }
 
 .data1,
 .data2 {
